--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/aria-query": "^5.0.1",
     "@types/axios": "^0.14.0",
     "@types/node": "^18.13.0",
     "axios": "^1.3.2",
@@ -13,11 +14,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy" : "http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
