--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@types/aria-query": "^5.0.1",
     "@types/axios": "^0.14.0",
     "@types/node": "^18.13.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
+    "jose": "^4.12.0",
     "jsonwebtoken": "^9.0.0",
+    "node-jose": "^2.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.1",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
@@ -45,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
