--- a/package.json
+++ b/package.json
@@ -3,21 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mapbox/mapbox-sdk": "^0.15.0",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/aria-query": "^5.0.1",
     "@types/axios": "^0.14.0",
+    "@types/google-maps": "^3.2.3",
     "@types/node": "^18.13.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
+    "google-map-react": "^2.2.0",
     "jose": "^4.12.0",
     "jsonwebtoken": "^9.0.0",
     "node-jose": "^2.2.0",
+    "opencage-api-client": "^1.0.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -49,7 +61,12 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.52.2",
+    "@types/googlemaps": "^3.43.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-map-gl": "^6.1.3",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
