--- a/package.json
+++ b/package.json
@@ -12,18 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/aria-query": "^5.0.1",
-    "@types/axios": "^0.14.0",
-    "@types/google-maps": "^3.2.3",
     "@types/node": "^18.13.0",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
-    "google-map-react": "^2.2.0",
     "jose": "^4.12.0",
-    "jsonwebtoken": "^9.0.0",
-    "node-jose": "^2.2.0",
-    "opencage-api-client": "^1.0.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -31,14 +24,15 @@
     "react-icons": "^4.8.0",
     "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://backend:5000",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "react-scripts start",
+    "start-watch": "WATCHPACK_POLLING=true react-scripts start",
+    "build": "react-scripts build",
     "tsc": "tsc",
     "eject": "react-scripts eject"
   },
@@ -61,10 +55,6 @@
     ]
   },
   "devDependencies": {
-    "@types/google-map-react": "^2.1.7",
-    "@types/google.maps": "^3.52.2",
-    "@types/googlemaps": "^3.43.3",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/react-icons": "^3.0.0",
     "@types/react-map-gl": "^6.1.3",
     "assert": "^2.0.0",
@@ -73,7 +63,6 @@
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
-    "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
