--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-stepper": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "react-stepper-horizontal": "^1.0.11",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
