--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/aria-query": "^5.0.1",
     "@types/node": "^18.13.0",
     "@types/react-router-dom": "^5.3.3",
+    "aws-sdk": "^2.1373.0",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "jose": "^4.12.0",
@@ -32,11 +33,11 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://backend:5000",
+  "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "react-scripts start",
-    "start-watch": "WATCHPACK_POLLING=true react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "start-watch": "WATCHPACK_POLLING=true react-app-rewired start",
+    "build": "react-app-rewired build",
     "tsc": "tsc",
     "eject": "react-scripts eject"
   },
@@ -50,7 +51,11 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not safari < 10",
+      "not chrome < 51",
+      "not android < 5",
+      "not ie < 12"
     ],
     "development": [
       "last 1 chrome version",
@@ -62,11 +67,14 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-map-gl": "^6.1.3",
     "assert": "^2.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "customize-cra": "^1.0.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
